--- a/PadariaDelicioPao/index.html
+++ b/PadariaDelicioPao/index.html
@@ -2,13 +2,47 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>Título da Página</title>
+        <title>Padaria Delicio Pão</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="padaria.css">
     </head>
     <body>
         <header>Cabeçalho</header>
-        <main>Corpo</main>
+        <main class="container mt-4">
+            <div id="productCarousel" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img src="img/Pãodequeijo.jpg" class="d-block w-100" alt="Produto 1">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5>Pão de Queijo</h5>
+                            <p>Delicioso pão de queijo caseiro.</p>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img src="img/bolodecenoura.jpg" class="d-block w-100" alt="Produto 2">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5>Bolo de Cenoura</h5>
+                            <p>Com cobertura de chocolate.</p>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img src="img/café.jpg" class="d-block w-100" alt="Produto 3">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5>Café Especial</h5>
+                            <p>Perfeito para acompanhar nossos pães.</p>
+                        </div>
+                    </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#productCarousel" data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Anterior</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#productCarousel" data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Próximo</span>
+                </button>
+            </div>
+        </main>
         <footer>Rodapé</footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     </body>
