--- a/PadariaDelicioPao/index.html
+++ b/PadariaDelicioPao/index.html
@@ -4,10 +4,13 @@
         <meta charset="UTF-8">
         <title>Padaria Delicio Pão</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+        <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;700&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="padaria.css">
     </head>
     <body>
-        <header>Cabeçalho</header>
+        <header class="header text-center py-5">
+            <h1 class="cursive-text">Bem-vindo à Delicio Pão</h1>
+        </header>
         <main class="container mt-4">
             <div id="productCarousel" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
