--- a/PadariaDelicioPao/index.html
+++ b/PadariaDelicioPao/index.html
@@ -46,7 +46,26 @@
                 </button>
             </div>
         </main>
-        <footer>Rodapé</footer>
+        <footer class="footer">
+            <div class="container py-4">
+                <div class="row">
+                    <div class="col-md-4">
+                        <h5>Sobre Nós</h5>
+                        <p>Na Delicio Pão, oferecemos produtos artesanais frescos todos os dias. Nosso compromisso é com a qualidade e o sabor.</p>
+                    </div>
+                    <div class="col-md-4">
+                        <h5>Contato</h5>
+                        <p><strong>Endereço:</strong> Rua dos Sabores, 123, Centro</p>
+                        <p><strong>Telefone:</strong> (31) 1234-5678</p>
+                        <p><strong>Email:</strong> contato@deliciopao.com.br</p>
+                    </div>
+                    <div class="col-md-4">
+                        <h5>Horário de Funcionamento</h5>
+                        <p>Segunda a Sexta: 7h - 19h</p>
+                        <p>Sábado: 8h - 18h</p>
+                        <p>Domingo: 8h - 13h</p>
+                    </div>
+        </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     </body>
 </html>
