--- a/PadariaDelicioPao/descricaosucos.html
+++ b/PadariaDelicioPao/descricaosucos.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>Bebidas - Padaria Delicio Pão</title>
+        <title>Sucos Naturais - Padaria Delicio Pão</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
         <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;700&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="padaria.css">
@@ -41,73 +41,28 @@
                 </form>
             </div>
         </nav>
-    <header class="header text-center py-5">
-        <h1 class="cursive-text">Bebidas</h1>
-    </header>
-    <main class="container mt-4">
-        <div class="row">
-            <div class="col-md-4 mb-4">
-                <div class="card">
-                    <img src="img/suco-de-laranja.jpg" class="card-img-top" alt="Suco">
-                    <div class="card-body">
-                        <h5 class="card-title">Sucos Naturais</h5>
-                        <p class="card-text">Refrescantes e 100% naturais.</p>
-                        <a href="descricaosucos.html" class="btn btn-primary">Mais informações</a>
-                    </div>
-                </div>
+        <main class="container main-content mt-5">
+            <div class="text-center">
+                <h1 class="cursive-text">Sucos Naturais</h1>
+                <img src="img/sucos.jpg" alt="Sucos Naturais" class="img-fluid mt-4" style="max-width: 400px;">
+                <p class="mt-4">Nossos sucos naturais são preparados com frutas frescas e selecionadas, sem adição de conservantes ou açúcar, garantindo o sabor e a saúde em cada gole.</p>
             </div>
-            <div class="col-md-4 mb-4">
-                <div class="card">
-                    <img src="img/refrigerante.jpg" class="card-img-top" alt="Refrigerante">
-                    <div class="card-body">
-                        <h5 class="card-title">Refrigerantes</h5>
-                        <p class="card-text">Diversas marcas e sabores.</p>
-                        <a href="refrigerante.html" class="btn btn-primary">Mais informações</a>
-                    </div>
-                </div>
+            <div class="mt-5">
+                <h3 class="text-center">Sabores Disponíveis</h3>
+                <ul class="list-group list-group-flush text-center mt-3">
+                    <li class="list-group-item">Laranja</li>
+                    <li class="list-group-item">Açaí com Morango</li>
+                    <li class="list-group-item">Abacaxi com Hortelã</li>
+                    <li class="list-group-item">Limão</li>
+                    <li class="list-group-item">Manga</li>
+                    <li class="list-group-item">Maracujá</li>
+                </ul>
             </div>
-            <div class="col-md-4 mb-4">
-                <div class="card">
-                    <img src="img/café.jpg" class="card-img-top" alt="Café">
-                    <div class="card-body">
-                        <h5 class="card-title">Café</h5>
-                        <p class="card-text">Feito com os melhores grãos.</p>
-                        <a href="cafe.html" class="btn btn-primary">Mais informações</a>
-                    </div>
-                </div>
+            <div class="text-center mt-5 mb-5">
+                <p>Gostou? Para encomendar nossos sucos naturais, entre em contato pelo telefone <strong>(31) 1234-5678</strong>.</p>
+                <a href="bebidas.html" class="btn btn-primary mt-3">Voltar para Bebidas</a>
             </div>
-            <div class="col-md-4 mb-4">
-                <div class="card">
-                    <img src="img/cappuccino.jpg" class="card-img-top" alt="Capuccino">
-                    <div class="card-body">
-                        <h5 class="card-title">Cappuccino</h5>
-                        <p class="card-text">Aveludado e cremoso.</p>
-                        <a href="capuccino.html" class="btn btn-primary">Mais informações</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4 mb-4">
-                <div class="card">
-                    <img src="img/açaí.jpg" class="card-img-top" alt="Batida">
-                    <div class="card-body">
-                        <h5 class="card-title">Batida de Açaí</h5>
-                        <p class="card-text">Refrescante e cremosa.</p>
-                        <a href="Açaí.html" class="btn btn-primary">Mais informações</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4 mb-4">
-                <div class="card">
-                    <img src="img/vitamina.jpg" class="card-img-top" alt="Vitamina">
-                    <div class="card-body">
-                        <h5 class="card-title">Vitaminas</h5>
-                        <p class="card-text">Nutritiva e saborosa.</p>
-                        <a href="vitamina.html" class="btn btn-primary">Mais informações</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </main>
+        </main>
     <footer class="footer">
         <div class="container py-4">
             <div class="row">
@@ -128,6 +83,6 @@
                     <p>Domingo: 8h - 13h</p>
                 </div>
     </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
