--- a/PadariaDelicioPao/index.html
+++ b/PadariaDelicioPao/index.html
@@ -21,14 +21,14 @@
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                                 <li><a class="dropdown-item" href="bebidas.html">Bebidas☕</a></li>
-                                <li><a class="dropdown-item" href="#bolos">Bolos🍰</a></li>
+                                <li><a class="dropdown-item" href="bolos.html">Bolos🍰</a></li>
                                 <li><a class="dropdown-item" href="#paes">Pães🍞</a></li>
                                 <li><a class="dropdown-item" href="#salgados">Salgados🍕</a></li>
                                 <li><a class="dropdown-item" href="#doces">Doces🍮</a></li>
                             </ul>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#contato">Contato</a>
+                            <a class="nav-link" href="#contato">Fale Conosco</a>
                         </li>
                     </ul>
                 </div>
