--- a/PadariaDelicioPao/index.html
+++ b/PadariaDelicioPao/index.html
@@ -22,9 +22,9 @@
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                                 <li><a class="dropdown-item" href="bebidas.html">Bebidas☕</a></li>
                                 <li><a class="dropdown-item" href="bolos.html">Bolos🍰</a></li>
-                                <li><a class="dropdown-item" href="#paes">Pães🍞</a></li>
-                                <li><a class="dropdown-item" href="#salgados">Salgados🍕</a></li>
-                                <li><a class="dropdown-item" href="#doces">Doces🍮</a></li>
+                                <li><a class="dropdown-item" href="paes.html">Pães🍞</a></li>
+                                <li><a class="dropdown-item" href="salgados.html">Salgados🍕</a></li>
+                                <li><a class="dropdown-item" href="doces.html">Doces🍮</a></li>
                             </ul>
                         </li>
                         <li class="nav-item">
