--- a/PadariaDelicioPao/index.html
+++ b/PadariaDelicioPao/index.html
@@ -28,7 +28,7 @@
                             </ul>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#contato">Fale Conosco</a>
+                            <a class="nav-link" href="contato.html">Fale Conosco</a>
                         </li>
                     </ul>
                 </div>
