Alterando imagens na página Doces

--- a/PadariaDelicioPao/doces.html
+++ b/PadariaDelicioPao/doces.html
@@ -48,7 +48,7 @@
             <div class="row">
                 <div class="col-md-4 mb-4">
                     <div class="card">
-                        <img src="img/donuts.jpg" class="card-img-top" alt="Donuts">
+                        <img src="img/donuts-de-morango.jpg" class="card-img-top" alt="Donuts">
                         <div class="card-body">
                             <h5 class="card-title">Donuts</h5>
                             <p class="card-text">Deliciosos e macios, com coberturas coloridas.</p>
@@ -98,7 +98,7 @@
                 </div>
                 <div class="col-md-4 mb-4">
                     <div class="card">
-                        <img src="img/torta_frutas.jpg" class="card-img-top" alt="Tortinha de Frutas">
+                        <img src="img/tortinha.jpg" class="card-img-top" alt="Tortinha de Frutas">
                         <div class="card-body">
                             <h5 class="card-title">Tortinha de Frutas</h5>
                             <p class="card-text">Leve, crocante e decorada com frutas frescas.</p>
