Criando páginas de descrição de cada bebida

--- a/PadariaDelicioPao/bebidas.html
+++ b/PadariaDelicioPao/bebidas.html
@@ -28,6 +28,9 @@
                             </ul>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link" href="===">Quem somos</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link" href="contato.html">Contato</a>
                         </li>
                     </ul>
@@ -52,7 +55,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Sucos Naturais</h5>
                         <p class="card-text">Refrescantes e 100% naturais.</p>
-                        <a href="descricaosucos.html" class="btn btn-primary">Mais informações</a>
+                        <a href="suco.html" class="btn btn-primary">Mais informações</a>
                     </div>
                 </div>
             </div>
@@ -82,7 +85,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Cappuccino</h5>
                         <p class="card-text">Aveludado e cremoso.</p>
-                        <a href="capuccino.html" class="btn btn-primary">Mais informações</a>
+                        <a href="cappuccino.html" class="btn btn-primary">Mais informações</a>
                     </div>
                 </div>
             </div>
@@ -92,7 +95,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Batida de Açaí</h5>
                         <p class="card-text">Refrescante e cremosa.</p>
-                        <a href="Açaí.html" class="btn btn-primary">Mais informações</a>
+                        <a href="acai.html" class="btn btn-primary">Mais informações</a>
                     </div>
                 </div>
             </div>
