--- a/PadariaDelicioPao/bolos.html
+++ b/PadariaDelicioPao/bolos.html
@@ -28,6 +28,9 @@
                             </ul>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link" href="===">Quem somos</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link" href="contato.html">Fale Conosco</a>
                         </li>
                     </ul>
