--- a/PadariaDelicioPao/cappuccino.html
+++ b/PadariaDelicioPao/cappuccino.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>Padaria Delicio Pão</title>
+        <title>Cappuccino - Padaria Delicio Pão</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
         <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;700&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="padaria.css">
@@ -28,10 +28,10 @@
                             </ul>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="===">Quem somos</a>
+                            <a class="nav-link" href="====">Quem somos</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="contato.html">Fale Conosco</a>
+                            <a class="nav-link" href="contato.html">Contato</a>
                         </li>
                     </ul>
                 </div>
@@ -44,44 +44,24 @@
                 </form>
             </div>
         </nav>
-        <header class="header text-center py-5">
-            <h1 class="cursive-text">Bem-vindo à Delicio Pão</h1>
-        </header>
-        <main class="container mt-4">
-            <div id="productCarousel" class="carousel slide mb-5" data-bs-ride="carousel">
-                <div class="carousel-inner">
-                    <div class="carousel-item active">
-                        <img src="img/Pãodequeijo.jpg" class="d-block w-100" alt="Produto 1">
-                        <div class="carousel-caption d-none d-md-block">
-                            <h5>Pão de Queijo</h5>
-                            <p>Delicioso pão de queijo caseiro.</p>
-                        </div>
-                    </div>
-                    <div class="carousel-item">
-                        <img src="img/bolodecenoura.jpg" class="d-block w-100" alt="Produto 2">
-                        <div class="carousel-caption d-none d-md-block">
-                            <h5>Bolo de Cenoura</h5>
-                            <p>Com cobertura de chocolate.</p>
-                        </div>
-                    </div>
-                    <div class="carousel-item">
-                        <img src="img/café.jpg" class="d-block w-100" alt="Produto 3">
-                        <div class="carousel-caption d-none d-md-block">
-                            <h5>Café Especial</h5>
-                            <p>Perfeito para acompanhar nossos pães.</p>
-                        </div>
-                    </div>
-                </div>
-                <button class="carousel-control-prev" type="button" data-bs-target="#productCarousel" data-bs-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Anterior</span>
-                </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#productCarousel" data-bs-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Próximo</span>
-                </button>
+        <main class="container mt-5 mb-5">
+            <h1 class="cursive-text text-center">Cappuccino</h1>
+            <div class="text-center">
+                <img src="img/cappuccino.jpg" alt="Cappuccino" class="img-fluid mt-3" style="max-width: 400px; border-radius: 10px;">
             </div>
-        </main>
+            <p class="text-center mt-4">Nosso cappuccino é feito com uma combinação perfeita de café, leite cremoso e um toque de chocolate ou canela. É a bebida ideal para quem adora um café sofisticado e saboroso.</p>
+            <h2 class="text-center mt-5">Variedades de Cappuccino</h2>
+            <div class="list-group mx-auto" style="max-width: 400px;">
+                <div class="list-group-item">Cappuccino Tradicional</div>
+                <div class="list-group-item">Cappuccino com Chocolate</div>
+                <div class="list-group-item">Cappuccino com Canela</div>
+                <div class="list-group-item">Cappuccino Gelado</div>
+            </div>
+            <p class="text-center mt-4">Peça agora pelo telefone <strong>(31) 1234-5678</strong> e aproveite um momento único de sabor!</p>
+            <div class="text-center mt-5">
+                <a href="bebidas.html" class="btn btn-primary">Voltar para Bebidas</a>
+            </div>
+        </main>    
         <footer class="footer">
             <div class="container py-4">
                 <div class="row">
