--- a/PadariaDelicioPao/paes.html
+++ b/PadariaDelicioPao/paes.html
@@ -28,7 +28,10 @@
                             </ul>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#contato">Fale Conosco</a>
+                            <a class="nav-link" href="===">Quem somos</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="contato.html">Fale Conosco</a>
                         </li>
                     </ul>
                 </div>
@@ -131,11 +134,3 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
-
-
-
-
-
-
-
-
