--- a/PadariaDelicioPao/salgados.html
+++ b/PadariaDelicioPao/salgados.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>Padaria Delicio Pão</title>
+        <title>Salgados - Padaria Delicio Pão</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
         <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;700&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="padaria.css">
@@ -26,6 +26,9 @@
                                 <li><a class="dropdown-item" href="salgados.html">Salgados🍕</a></li>
                                 <li><a class="dropdown-item" href="doces.html">Doces🍮</a></li>
                             </ul>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="===">Quem somos</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="contato.html">Fale Conosco</a>
