--- a/PadariaDelicioPao/suco.html
+++ b/PadariaDelicioPao/suco.html
@@ -28,6 +28,9 @@
                             </ul>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link" href="====">Sobre nós</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link" href="contato.html">Contato</a>
                         </li>
                     </ul>
