Adicionando descrição a página Açaí

--- a/PadariaDelicioPao/acai.html
+++ b/PadariaDelicioPao/acai.html
@@ -44,3 +44,46 @@
                 </form>
             </div>
         </nav>
+        <main class="container mt-5 mb-5">
+            <h1 class="cursive-text text-center">Batida de Açaí</h1>
+            <div class="text-center">
+                <img src="img/acai.jpg" alt="Batida de Açaí" class="img-fluid mt-3" style="max-width: 400px; border-radius: 10px;">
+            </div>
+            <p class="text-center mt-4">A Batida de Açaí da Delicio Pão é uma explosão de energia e sabor! Feita com açaí puro e acompanhamentos deliciosos, é ideal para quem busca um lanche saudável e nutritivo.</p>
+            <h2 class="text-center mt-5">Ingredientes e Opções</h2>
+            <div class="list-group mx-auto" style="max-width: 400px;">
+                <div class="list-group-item">Açaí com banana</div>
+                <div class="list-group-item">Açaí com granola</div>
+                <div class="list-group-item">Açaí com leite condensado</div>
+                <div class="list-group-item">Açaí com frutas variadas</div>
+            </div>
+            <p class="text-center mt-4">Encomende agora mesmo pelo telefone <strong>(31) 1234-5678</strong> e saboreie o melhor do açaí!</p>
+            <div class="text-center mt-5">
+                <a href="bebidas.html" class="btn btn-primary">Voltar para Bebidas</a>
+            </div>
+        </main>
+        
+        <footer class="footer">
+            <div class="container py-4">
+                <div class="row">
+                    <div class="col-md-4">
+                        <h5>Sobre Nós</h5>
+                        <p>Na Delicio Pão, oferecemos produtos artesanais frescos todos os dias. Nosso compromisso é com a qualidade e o sabor.</p>
+                    </div>
+                    <div class="col-md-4">
+                        <h5>Contato</h5>
+                        <p><strong>Endereço:</strong> Rua dos Sabores, 123, Centro</p>
+                        <p><strong>Telefone:</strong> (31) 1234-5678</p>
+                        <p><strong>Email:</strong> contato@deliciopao.com.br</p>
+                    </div>
+                    <div class="col-md-4">
+                        <h5>Horário de Funcionamento</h5>
+                        <p>Segunda a Sexta: 7h - 19h</p>
+                        <p>Sábado: 8h - 18h</p>
+                        <p>Domingo: 8h - 13h</p>
+                    </div>
+        </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    </body>
+</html>
+        
