--- a/PadariaDelicioPao/acai.html
+++ b/PadariaDelicioPao/acai.html
@@ -47,7 +47,7 @@
         <main class="container mt-5 mb-5">
             <h1 class="cursive-text text-center">Batida de Açaí</h1>
             <div class="text-center">
-                <img src="img/acai.jpg" alt="Batida de Açaí" class="img-fluid mt-3" style="max-width: 400px; border-radius: 10px;">
+                <img src="img/açaí.jpg" alt="Batida de Açaí" class="img-fluid mt-3" style="max-width: 400px; border-radius: 10px;">
             </div>
             <p class="text-center mt-4">A Batida de Açaí da Delicio Pão é uma explosão de energia e sabor! Feita com açaí puro e acompanhamentos deliciosos, é ideal para quem busca um lanche saudável e nutritivo.</p>
             <h2 class="text-center mt-5">Ingredientes e Opções</h2>
