Adicionando imagens a página bolos

--- a/PadariaDelicioPao/bolos.html
+++ b/PadariaDelicioPao/bolos.html
@@ -51,7 +51,7 @@
     <div class="row">
         <div class="col-md-4 mb-4">
             <div class="card">
-                <img src="img/bolo_festa.jpg" class="card-img-top" alt="Bolos Recheados para Festa">
+                <img src="img/bolo_recheado.jpg" class="card-img-top" alt="Bolos Recheados para Festa">
                 <div class="card-body">
                     <h5 class="card-title">Bolos Recheados para Festa</h5>
                     <p class="card-text">Sabor e elegância para celebrar momentos especiais.</p>
@@ -64,34 +64,34 @@
                 <img src="img/broa.jpg" class="card-img-top" alt="Broá">
                 <div class="card-body">
                     <h5 class="card-title">Broá</h5>
-                    <p class="card-text">Um clássico simples e delicioso.</p>
+                    <p class="card-text">Um bolo simples, mas um sabor inconfundivel de tradição.</p>
                     <a href="broa.html" class="btn btn-primary">Mais informações</a>
                 </div>
             </div>
         </div>
         <div class="col-md-4 mb-4">
             <div class="card">
-                <img src="img/bolo_banana.jpg" class="card-img-top" alt="Bolo de Banana">
+                <img src="img/bolobanana.jpg" class="card-img-top" alt="Bolo de Banana">
                 <div class="card-body">
                     <h5 class="card-title">Bolo de Banana</h5>
-                    <p class="card-text">Maciez com o sabor natural da banana.</p>
+                    <p class="card-text">Feito com bananas maduras para um sabor irresistível.</p>
                     <a href="bolobanana.html" class="btn btn-primary">Mais informações</a>
                 </div>
             </div>
         </div>
         <div class="col-md-4 mb-4">
             <div class="card">
-                <img src="img/bolo_laranja.jpg" class="card-img-top" alt="Bolo de Laranja">
+                <img src="img/bolodelaranja.jpg" class="card-img-top" alt="Bolo de Laranja">
                 <div class="card-body">
                     <h5 class="card-title">Bolo de Laranja</h5>
-                    <p class="card-text">Leve e com aroma cítrico irresistível.</p>
+                    <p class="card-text">Com um toque cítrico e refrescante, perfeito para o café.</p>
                     <a href="bololaranja.html" class="btn btn-primary">Mais informações</a>
                 </div>
             </div>
         </div>
         <div class="col-md-4 mb-4">
             <div class="card">
-                <img src="img/bolo_mesclado.jpg" class="card-img-top" alt="Bolo Mesclado">
+                <img src="img/bolomesclado.jpg" class="card-img-top" alt="Bolo Mesclado">
                 <div class="card-body">
                     <h5 class="card-title">Bolo Mesclado</h5>
                     <p class="card-text">O melhor dos dois mundos: chocolate e baunilha.</p>
@@ -101,7 +101,7 @@
         </div>
         <div class="col-md-4 mb-4">
             <div class="card">
-                <img src="img/bolo_cenoura.jpg" class="card-img-top" alt="Bolo de Cenoura">
+                <img src="img/bolodecenoura.jpg" class="card-img-top" alt="Bolo de Cenoura">
                 <div class="card-body">
                     <h5 class="card-title">Bolo de Cenoura</h5>
                     <p class="card-text">Coberto com uma camada generosa de chocolate.</p>
