Adicionando imagens aos cards da página pães

--- a/PadariaDelicioPao/bolos.html
+++ b/PadariaDelicioPao/bolos.html
@@ -94,7 +94,7 @@
                 <img src="img/bolomesclado.jpg" class="card-img-top" alt="Bolo Mesclado">
                 <div class="card-body">
                     <h5 class="card-title">Bolo Mesclado</h5>
-                    <p class="card-text">O melhor dos dois mundos: chocolate e baunilha.</p>
+                    <p class="card-text">Um bolo macio, com camadas intercaladas de massa branca e de chocolate.</p>
                     <a href="bolomesclado.html" class="btn btn-primary">Mais informações</a>
                 </div>
             </div>
@@ -104,7 +104,7 @@
                 <img src="img/bolodecenoura.jpg" class="card-img-top" alt="Bolo de Cenoura">
                 <div class="card-body">
                     <h5 class="card-title">Bolo de Cenoura</h5>
-                    <p class="card-text">Coberto com uma camada generosa de chocolate.</p>
+                    <p class="card-text">Uma massa leve de cenoura, coberta por uma generosa camada de chocolate ao leite.</p>
                     <a href="bolocenoura.html" class="btn btn-primary">Mais informações</a>
                 </div>
             </div>
