--- a/PadariaDelicioPao/paes.html
+++ b/PadariaDelicioPao/paes.html
@@ -51,7 +51,7 @@
         <div class="row">
             <div class="col-md-4 mb-4">
                 <div class="card">
-                    <img src="img/paodoce.jpg" class="card-img-top" alt="Pão de Doce">
+                    <img src="img/pao_doce.jpg" class="card-img-top" alt="Pão de Doce">
                     <div class="card-body">
                         <h5 class="card-title">Pão de Doce</h5>
                         <p class="card-text">Perfeito para adoçar o dia.</p>
@@ -61,7 +61,7 @@
             </div>
             <div class="col-md-4 mb-4">
                 <div class="card">
-                    <img src="img/pao_frances.jpg" class="card-img-top" alt="Pão Francês">
+                    <img src="img/paofrances.jpg" class="card-img-top" alt="Pão Francês">
                     <div class="card-body">
                         <h5 class="card-title">Pão Francês</h5>
                         <p class="card-text">Clássico e sempre fresco.</p>
@@ -71,7 +71,7 @@
             </div>
             <div class="col-md-4 mb-4">
                 <div class="card">
-                    <img src="img/baquete.jpg" class="card-img-top" alt="Baguete">
+                    <img src="img/baguete.jpg" class="card-img-top" alt="Baguete">
                     <div class="card-body">
                         <h5 class="card-title">Baguete</h5>
                         <p class="card-text">Crocante e ideal para sanduíches.</p>
@@ -81,7 +81,7 @@
             </div>
             <div class="col-md-4 mb-4">
                 <div class="card">
-                    <img src="img/pao_mussarela.jpg" class="card-img-top" alt="Pão com Mussarela">
+                    <img src="img/paomussarela.jpg" class="card-img-top" alt="Pão com Mussarela">
                     <div class="card-body">
                         <h5 class="card-title">Pão com Mussarela</h5>
                         <p class="card-text">Cobertura de queijo irresistível.</p>
@@ -91,7 +91,7 @@
             </div>
             <div class="col-md-4 mb-4">
                 <div class="card">
-                    <img src="img/pao_integral.jpg" class="card-img-top" alt="Pão Integral">
+                    <img src="img/paointegral.jpg" class="card-img-top" alt="Pão Integral">
                     <div class="card-body">
                         <h5 class="card-title">Pão Integral</h5>
                         <p class="card-text">Saudável e saboroso.</p>
@@ -101,7 +101,7 @@
             </div>
             <div class="col-md-4 mb-4">
                 <div class="card">
-                    <img src="img/pao_italiano.jpg" class="card-img-top" alt="Pão Italiano">
+                    <img src="img/paoitaliano.jpg" class="card-img-top" alt="Pão Italiano">
                     <div class="card-body">
                         <h5 class="card-title">Pão Italiano</h5>
                         <p class="card-text">Rusticidade e sabor incomparáveis.</p>
