Adicionando imagens aos cards da página Salgados

--- a/PadariaDelicioPao/salgados.html
+++ b/PadariaDelicioPao/salgados.html
@@ -71,7 +71,7 @@
                 </div>
                 <div class="col-md-4 mb-4">
                     <div class="card">
-                        <img src="img/minisalgados.jpg" class="card-img-top" alt="Mini Salgados">
+                        <img src="img/salgados.jpg" class="card-img-top" alt="Mini Salgados">
                         <div class="card-body">
                             <h5 class="card-title">Mini Salgados</h5>
                             <p class="card-text">Pequenos, variados e perfeitos para festas.</p>
@@ -101,10 +101,10 @@
                 </div>
                 <div class="col-md-4 mb-4">
                     <div class="card">
-                        <img src="img/quibe.jpg" class="card-img-top" alt="Quibe">
+                        <img src="img/Pãodequeijo.jpg" class="card-img-top" alt="Pão de Queijo">
                         <div class="card-body">
-                            <h5 class="card-title">Quibe</h5>
-                            <p class="card-text">Tradicional e saboroso, com recheio de carne temperada.</p>
+                            <h5 class="card-title">Pão de Queijo</h5>
+                            <p class="card-text">Textura leve, feito com queijo e polvilho.</p>
                             <a href="quibe.html" class="btn btn-primary">Mais informações</a>
                         </div>
                     </div>
