Corrigindo card da página doces

--- a/PadariaDelicioPao/doces.html
+++ b/PadariaDelicioPao/doces.html
@@ -84,7 +84,7 @@
                         <img src="img/brigadeiro.jpg" class="card-img-top" alt="Brigadeiro">
                         <div class="card-body">
                             <h5 class="card-title">Brigadeiro</h5>
-                            <p class="card-text">Clássico doce brasileiro feito com chocolate e leite condensado.</p>
+                            <p class="card-text">Clássico doce brasileiro, delicioso e irresistível.</p>
                             <a href="brigadeiro.html" class="btn btn-primary">Mais informações</a>
                         </div>
                     </div>
