--- a/PadariaDelicioPao/refrigerante.html
+++ b/PadariaDelicioPao/refrigerante.html
@@ -28,7 +28,7 @@
                             </ul>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="====">Quem somos</a>
+                            <a class="nav-link" href="quemsomos.html">Quem somos</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="contato.html">Contato</a>
