--- a/PadariaDelicioPao/contato.html
+++ b/PadariaDelicioPao/contato.html
@@ -65,7 +65,7 @@
                             <label for="message" class="form-label">Mensagem</label>
                             <textarea class="form-control" id="message" rows="5" placeholder="Sua mensagem"></textarea>
                         </div>
-                        <button type="submit" class="btn btn-primary">Enviar</button>
+                        <button type="submit" class="btn btn-outline-dark">Enviar</button>
                     </form>
                 </div>
             </section>
