--- a/PadariaDelicioPao/doces.html
+++ b/PadariaDelicioPao/doces.html
@@ -55,7 +55,7 @@
                         <div class="card-body">
                             <h5 class="card-title">Donuts</h5>
                             <p class="card-text">Deliciosos e macios, com coberturas coloridas.</p>
-                            <a href="donuts.html" class="btn btn-primary">Mais informações</a>
+                            <a href="donuts.html" class="btn btn-outline-dark">Mais informações</a>
                         </div>
                     </div>
                 </div>
@@ -65,7 +65,7 @@
                         <div class="card-body">
                             <h5 class="card-title">Sonho</h5>
                             <p class="card-text">Recheado com creme ou doce de leite, irresistível.</p>
-                            <a href="sonho.html" class="btn btn-primary">Mais informações</a>
+                            <a href="sonho.html" class="btn btn-outline-dark">Mais informações</a>
                         </div>
                     </div>
                 </div>
@@ -75,7 +75,7 @@
                         <div class="card-body">
                             <h5 class="card-title">Cupcake</h5>
                             <p class="card-text">Pequeno e elegante, perfeito para qualquer ocasião.</p>
-                            <a href="cupcake.html" class="btn btn-primary">Mais informações</a>
+                            <a href="cupcake.html" class="btn btn-outline-dark">Mais informações</a>
                         </div>
                     </div>
                 </div>
@@ -85,7 +85,7 @@
                         <div class="card-body">
                             <h5 class="card-title">Brigadeiro</h5>
                             <p class="card-text">Clássico doce brasileiro, delicioso e irresistível.</p>
-                            <a href="brigadeiro.html" class="btn btn-primary">Mais informações</a>
+                            <a href="brigadeiro.html" class="btn btn-outline-dark">Mais informações</a>
                         </div>
                     </div>
                 </div>
@@ -95,7 +95,7 @@
                         <div class="card-body">
                             <h5 class="card-title">Pudim</h5>
                             <p class="card-text">Uma sobremesa cremosa com calda de caramelo.</p>
-                            <a href="pudim.html" class="btn btn-primary">Mais informações</a>
+                            <a href="pudim.html" class="btn btn-outline-dark">Mais informações</a>
                         </div>
                     </div>
                 </div>
@@ -105,7 +105,7 @@
                         <div class="card-body">
                             <h5 class="card-title">Tortinha de Frutas</h5>
                             <p class="card-text">Leve, crocante e decorada com frutas frescas.</p>
-                            <a href="tortafrutas.html" class="btn btn-primary">Mais informações</a>
+                            <a href="tortafrutas.html" class="btn btn-outline-dark">Mais informações</a>
                         </div>
                     </div>
                 </div>
