--- a/PadariaDelicioPao/paes.html
+++ b/PadariaDelicioPao/paes.html
@@ -55,7 +55,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Pão de Doce</h5>
                         <p class="card-text">Perfeito para adoçar o dia.</p>
-                        <a href="paodoce.html" class="btn btn-primary">Mais informações</a>
+                        <a href="paodoce.html" class="btn btn-outline-dark">Mais informações</a>
                     </div>
                 </div>
             </div>
@@ -65,7 +65,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Pão Francês</h5>
                         <p class="card-text">Clássico e sempre fresco.</p>
-                        <a href="paofrances.html" class="btn btn-primary">Mais informações</a>
+                        <a href="paofrances.html" class="btn btn-outline-dark">Mais informações</a>
                     </div>
                 </div>
             </div>
@@ -75,7 +75,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Baguete</h5>
                         <p class="card-text">Crocante e ideal para sanduíches.</p>
-                        <a href="baguete.html" class="btn btn-primary">Mais informações</a>
+                        <a href="baguete.html" class="btn btn-outline-dark">Mais informações</a>
                     </div>
                 </div>
             </div>
@@ -85,7 +85,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Pão com Mussarela</h5>
                         <p class="card-text">Cobertura de queijo irresistível.</p>
-                        <a href="paomussarela.html" class="btn btn-primary">Mais informações</a>
+                        <a href="paomussarela.html" class="btn btn-outline-dark">Mais informações</a>
                     </div>
                 </div>
             </div>
@@ -95,7 +95,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Pão Integral</h5>
                         <p class="card-text">Saudável e saboroso.</p>
-                        <a href="paointegral.html" class="btn btn-primary">Mais informações</a>
+                        <a href="paointegral.html" class="btn btn-outline-dark">Mais informações</a>
                     </div>
                 </div>
             </div>
@@ -105,7 +105,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Pão Italiano</h5>
                         <p class="card-text">Rusticidade e sabor incomparáveis.</p>
-                        <a href="paoitaliano.html" class="btn btn-primary">Mais informações</a>
+                        <a href="paoitaliano.html" class="btn btn-outline-dark">Mais informações</a>
                     </div>
                 </div>
             </div>
