--- a/PadariaDelicioPao/salgados.html
+++ b/PadariaDelicioPao/salgados.html
@@ -55,7 +55,7 @@
                         <div class="card-body">
                             <h5 class="card-title">Pedaço de Pizza</h5>
                             <p class="card-text">Fatias generosas com variados sabores.</p>
-                            <a href="pizza.html" class="btn btn-primary">Mais informações</a>
+                            <a href="pizza.html" class="btn btn-outline-dark">Mais informações</a>
                         </div>
                     </div>
                 </div>
@@ -65,7 +65,7 @@
                         <div class="card-body">
                             <h5 class="card-title">Empadas</h5>
                             <p class="card-text">Recheios cremosos em uma massa leve e saborosa.</p>
-                            <a href="empadas.html" class="btn btn-primary">Mais informações</a>
+                            <a href="empadas.html" class="btn btn-outline-dark">Mais informações</a>
                         </div>
                     </div>
                 </div>
@@ -75,7 +75,7 @@
                         <div class="card-body">
                             <h5 class="card-title">Mini Salgados</h5>
                             <p class="card-text">Pequenos, variados e perfeitos para festas.</p>
-                            <a href="minisalgados.html" class="btn btn-primary">Mais informações</a>
+                            <a href="minisalgados.html" class="btn btn-outline-dark">Mais informações</a>
                         </div>
                     </div>
                 </div>
@@ -85,7 +85,7 @@
                         <div class="card-body">
                             <h5 class="card-title">Espetinho</h5>
                             <p class="card-text">Uma explosão de sabor em cada palito.</p>
-                            <a href="espetinho.html" class="btn btn-primary">Mais informações</a>
+                            <a href="espetinho.html" class="btn btn-outline-dark">Mais informações</a>
                         </div>
                     </div>
                 </div>
@@ -95,7 +95,7 @@
                         <div class="card-body">
                             <h5 class="card-title">Coxinha</h5>
                             <p class="card-text">Clássica e deliciosa, com recheio de frango.</p>
-                            <a href="coxinha.html" class="btn btn-primary">Mais informações</a>
+                            <a href="coxinha.html" class="btn btn-outline-dark">Mais informações</a>
                         </div>
                     </div>
                 </div>
@@ -105,7 +105,7 @@
                         <div class="card-body">
                             <h5 class="card-title">Pão de Queijo</h5>
                             <p class="card-text">Textura leve, feito com queijo e polvilho.</p>
-                            <a href="quibe.html" class="btn btn-primary">Mais informações</a>
+                            <a href="quibe.html" class="btn btn-outline-dark">Mais informações</a>
                         </div>
                     </div>
                 </div>
