--- a/PadariaDelicioPao/suco.html
+++ b/PadariaDelicioPao/suco.html
@@ -63,7 +63,7 @@
             </div>
             <div class="text-center mt-5 mb-5">
                 <p>Gostou? Para encomendar nossos sucos naturais, entre em contato pelo telefone <strong>(31) 1234-5678</strong>.</p>
-                <a href="bebidas.html" class="btn btn-primary mt-3">Voltar para Bebidas</a>
+                <a href="bebidas.html" class="btn btn-outline-dark">Voltar para Bebidas</a>
             </div>
         </main>
     <footer class="footer">
