--- a/PadariaDelicioPao/bebidas.html
+++ b/PadariaDelicioPao/bebidas.html
@@ -55,7 +55,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Sucos Naturais</h5>
                         <p class="card-text">Refrescantes e 100% naturais.</p>
-                        <a href="suco.html" class="btn btn-primary">Mais informações</a>
+                        <a href="suco.html" class="btn btn-outline-dark">Mais informações</a>
                     </div>
                 </div>
             </div>
@@ -65,7 +65,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Refrigerantes</h5>
                         <p class="card-text">Diversas marcas e sabores.</p>
-                        <a href="refrigerante.html" class="btn btn-primary">Mais informações</a>
+                        <a href="refrigerante.html" class="btn btn-outline-dark">Mais informações</a>
                     </div>
                 </div>
             </div>
@@ -75,7 +75,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Café</h5>
                         <p class="card-text">Feito com os melhores grãos.</p>
-                        <a href="cafe.html" class="btn btn-primary">Mais informações</a>
+                        <a href="cafe.html" class="btn btn-outline-dark">Mais informações</a>
                     </div>
                 </div>
             </div>
@@ -85,7 +85,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Cappuccino</h5>
                         <p class="card-text">Aveludado e cremoso.</p>
-                        <a href="cappuccino.html" class="btn btn-primary">Mais informações</a>
+                        <a href="cappuccino.html" class="btn btn-outline-dark">Mais informações</a>
                     </div>
                 </div>
             </div>
@@ -95,7 +95,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Batida de Açaí</h5>
                         <p class="card-text">Refrescante e cremosa.</p>
-                        <a href="acai.html" class="btn btn-primary">Mais informações</a>
+                        <a href="acai.html" class="btn btn-outline-dark">Mais informações</a>
                     </div>
                 </div>
             </div>
@@ -105,7 +105,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Vitaminas</h5>
                         <p class="card-text">Nutritiva e saborosa.</p>
-                        <a href="vitamina.html" class="btn btn-primary">Mais informações</a>
+                        <a href="vitamina.html" class="btn btn-outline-dark">Mais informações</a>
                     </div>
                 </div>
             </div>
