--- a/PadariaDelicioPao/bolos.html
+++ b/PadariaDelicioPao/bolos.html
@@ -55,7 +55,7 @@
                 <div class="card-body">
                     <h5 class="card-title">Bolos Recheados para Festa</h5>
                     <p class="card-text">Sabor e elegância para celebrar momentos especiais.</p>
-                    <a href="bolofesta.html" class="btn btn-primary">Mais informações</a>
+                    <a href="bolofesta.html" class="btn btn-outline-dark">Mais informações</a>
                 </div>
             </div>
         </div>
@@ -65,7 +65,7 @@
                 <div class="card-body">
                     <h5 class="card-title">Broá</h5>
                     <p class="card-text">Um bolo simples, mas um sabor inconfundivel de tradição.</p>
-                    <a href="broa.html" class="btn btn-primary">Mais informações</a>
+                    <a href="broa.html" class="btn btn-outline-dark">Mais informações</a>
                 </div>
             </div>
         </div>
@@ -75,7 +75,7 @@
                 <div class="card-body">
                     <h5 class="card-title">Bolo de Banana</h5>
                     <p class="card-text">Feito com bananas maduras para um sabor irresistível.</p>
-                    <a href="bolobanana.html" class="btn btn-primary">Mais informações</a>
+                    <a href="bolobanana.html" class="btn btn-outline-dark">Mais informações</a>
                 </div>
             </div>
         </div>
@@ -85,7 +85,7 @@
                 <div class="card-body">
                     <h5 class="card-title">Bolo de Laranja</h5>
                     <p class="card-text">Com um toque cítrico e refrescante, perfeito para o café.</p>
-                    <a href="bololaranja.html" class="btn btn-primary">Mais informações</a>
+                    <a href="bololaranja.html" class="btn btn-outline-dark">Mais informações</a>
                 </div>
             </div>
         </div>
@@ -95,7 +95,7 @@
                 <div class="card-body">
                     <h5 class="card-title">Bolo Mesclado</h5>
                     <p class="card-text">Um bolo macio, com camadas intercaladas de massa branca e de chocolate.</p>
-                    <a href="bolomesclado.html" class="btn btn-primary">Mais informações</a>
+                    <a href="bolomesclado.html" class="btn btn-outline-dark">Mais informações</a>
                 </div>
             </div>
         </div>
@@ -105,7 +105,7 @@
                 <div class="card-body">
                     <h5 class="card-title">Bolo de Cenoura</h5>
                     <p class="card-text">Uma massa leve de cenoura, coberta por uma generosa camada de chocolate ao leite.</p>
-                    <a href="bolocenoura.html" class="btn btn-primary">Mais informações</a>
+                    <a href="bolocenoura.html" class="btn btn-outline-dark">Mais informações</a>
                 </div>
             </div>
         </div>
