--- a/PadariaDelicioPao/cafe.html
+++ b/PadariaDelicioPao/cafe.html
@@ -59,7 +59,7 @@
             </div>
             <p class="text-center mt-4">Ligue para <strong>(31) 1234-5678</strong> e peça sua dose diária de energia!</p>
             <div class="text-center mt-5">
-                <a href="bebidas.html" class="btn btn-primary">Voltar para Bebidas</a>
+                <a href="bebidas.html" class="btn btn-outline-dark">Voltar para Bebidas</a>
             </div>
         </main>
         <footer class="footer">
