--- a/PadariaDelicioPao/refrigerante.html
+++ b/PadariaDelicioPao/refrigerante.html
@@ -60,7 +60,7 @@
         </div>
         <p class="text-center mt-4">Peça agora pelo telefone <strong>(31) 1234-5678</strong> e garanta a bebida para o seu momento especial!</p>
         <div class="text-center mt-5">
-            <a href="bebidas.html" class="btn btn-primary">Voltar para Bebidas</a>
+            <a href="bebidas.html" class="btn btn-outline-dark">Voltar para Bebidas</a>
         </div>
     </main>
     <footer class="footer">
