Criando a página Empadas

--- a/PadariaDelicioPao/empadas.html
+++ b/PadariaDelicioPao/empadas.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>Salgados - Padaria Delicio Pão</title>
+        <title>Empadas - Padaria Delicio Pão</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
         <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;700&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="padaria.css">
@@ -44,72 +44,36 @@
                 </form>
             </div>
         </nav>
-        <header class="header text-center py-5">
-            <h1 class="cursive-text">Salgados</h1>
-        </header>
-        <main class="container mt-4">
-            <div class="row">
-                <div class="col-md-4 mb-4">
-                    <div class="card">
-                        <img src="img/pizza.jpg" class="card-img-top" alt="Pedaço de Pizza">
-                        <div class="card-body">
-                            <h5 class="card-title">Pedaço de Pizza</h5>
-                            <p class="card-text">Fatias generosas com variados sabores.</p>
-                            <a href="pizza.html" class="btn btn-outline-dark">Mais informações</a>
-                        </div>
-                    </div>
+        <main class="container mt-5 mb-5">
+            <section class="text-center">
+                <div>
+                    <img src="img/empada.jpg" alt="Empadas" class="img-fluid mt-3" style="max-width: 400px; border-radius: 10px;">
                 </div>
-                <div class="col-md-4 mb-4">
-                    <div class="card">
-                        <img src="img/empada.jpg" class="card-img-top" alt="Empadas">
-                        <div class="card-body">
-                            <h5 class="card-title">Empadas</h5>
-                            <p class="card-text">Recheios cremosos em uma massa leve.</p>
-                            <a href="empadas.html" class="btn btn-outline-dark">Mais informações</a>
-                        </div>
-                    </div>
+                <h1 class="cursive-text mb-4">Empadas</h1>
+                <p class="lead">Com massa crocante e recheios variados, nossas empadas são um verdadeiro sucesso. Saborosas e perfeitas para qualquer hora do dia!</p>
+            </section>
+    
+            <section class="row justify-content-center">
+                <div class="col-md-8">
+                    <ul class="list-group">
+                        <li class="list-group-item">
+                            <h4>Descrição</h4>
+                            <p>Feitas com massa leve e crocante, recheadas com frango, carne ou queijo. Uma explosão de sabor em cada mordida.</p>
+                        </li>
+                        <li class="list-group-item">
+                            <h4>Variedades</h4>
+                            <p>Frango, Carne Seca, Queijo com Presunto e Palmito.</p>
+                        </li>
+                        <li class="list-group-item">
+                            <h4>Preço</h4>
+                            <p>Preço médio: R$ 6,00 por unidade.</p>
+                        </li>
+                    </ul>
                 </div>
-                <div class="col-md-4 mb-4">
-                    <div class="card">
-                        <img src="img/salgados.jpg" class="card-img-top" alt="Mini Salgados">
-                        <div class="card-body">
-                            <h5 class="card-title">Mini Salgados</h5>
-                            <p class="card-text">Pequenos, variados e perfeitos para festas.</p>
-                            <a href="minisalgados.html" class="btn btn-outline-dark">Mais informações</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4 mb-4">
-                    <div class="card">
-                        <img src="img/espetinho.jpg" class="card-img-top" alt="Espetinho">
-                        <div class="card-body">
-                            <h5 class="card-title">Espetinho</h5>
-                            <p class="card-text">Uma explosão de sabor em cada palito.</p>
-                            <a href="espetinho.html" class="btn btn-outline-dark">Mais informações</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4 mb-4">
-                    <div class="card">
-                        <img src="img/coxinha.jpg" class="card-img-top" alt="Coxinha">
-                        <div class="card-body">
-                            <h5 class="card-title">Coxinha</h5>
-                            <p class="card-text">Clássica e deliciosa, com recheio de frango.</p>
-                            <a href="coxinha.html" class="btn btn-outline-dark">Mais informações</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4 mb-4">
-                    <div class="card">
-                        <img src="img/Pãodequeijo.jpg" class="card-img-top" alt="Pão de Queijo">
-                        <div class="card-body">
-                            <h5 class="card-title">Pão de Queijo</h5>
-                            <p class="card-text">Textura leve, feito com queijo e polvilho.</p>
-                            <a href="quibe.html" class="btn btn-outline-dark">Mais informações</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
+            </section>
+            <section class="text-center mt-5">
+                <a href="salgados.html" class="btn btn-outline-dark">Voltar para os Salgados</a>
+            </section>
         </main>
         <footer class="footer">
             <div class="container py-4">
@@ -133,4 +97,5 @@
         </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     </body>
-</html>
+    </html>
+    
