Criando e finalizando a página Bolo de Mesclado

--- a/PadariaDelicioPao/bolomesclado.html
+++ b/PadariaDelicioPao/bolomesclado.html
@@ -44,3 +44,30 @@
                 </form>
             </div>
         </nav>
+        <main class="container mt-5 mb-5">
+            <section class="text-center">
+                <div>
+                    <img src="img/bolomesclado.jpg" alt="Bolo Mesclado" class="img-fluid mt-3" style="max-width: 400px; border-radius: 10px;">
+                </div>
+                <h1 class="cursive-text mb-4">Bolo Mesclado</h1>
+                <p class="lead">O equilíbrio perfeito entre baunilha e chocolate em uma única fatia.</p>
+            </section>
+            <section class="row justify-content-center mt-4">
+                <div class="col-md-8">
+                    <ul class="list-group">
+                        <li class="list-group-item">
+                            <h4>Descrição</h4>
+                            <p>O bolo mesclado combina a suavidade da baunilha com o sabor intenso do chocolate, criando um efeito marmorizado delicioso.</p>
+                        </li>
+                        <li class="list-group-item">
+                            <h4>Preço</h4>
+                            <p>R$ 27,90 por unidade.</p>
+                        </li>
+                    </ul>
+                </div>
+            </section>
+    
+            <section class="text-center mt-5">
+                <a href="bolos.html" class="btn btn-outline-dark">Voltar para os Bolos</a>
+            </section>
+        </main>
